<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WLTwitter_Part1</string>
    <string name="hello_world">Hello world!</string>

    <!-- MENU -->
    <string name="action_logout">Logout</string>

    <!-- LOGIN -->
    <string name="loginHint">Your Twitter login</string>
    <string name="passwordHint">Your Twitter password</string>
    <string name="login">Sign in</string>
    <string name="error_no_login">Empty login !</string>
    <string name="error_no_password">Empty password !</string>
    <string name="action_settings">Menu</string>

    <string name="Name">Name : John</string>
    <string name="Age">Age : 42 ans</string>
    <string name="CityOfBirth">City of birth : NYC</string>
    <string name="Status">Status : First Android training today !</string>
    <string name="profil_picture">Photo de profile</string>
    <string name="edit_profile">edit</string>


    <string name="tweets_fragments">tweets</string>
    <string name="usernameViewListedTweet">USERNAME</string>
    <string name="aliasTweetListView">Alias</string>
    <string name="contentTweetList">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet est quis felis posuere luctus nec ac eros. Sed vestibulum mi non pulvinar tempus. Curabitur tristique ipsum nec metus consectetur luctus. Donec porta malesuada congue. Proin dignissim, nibh facilisis amet. </string>
    <string name="rt">RT</string>
    <string name="photodeprofile">photoDeProfile</string>
</resources>
