<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="34dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="267dp"
        android:contentDescription="@string/profil_picture"
        android:src="@drawable/twitter"
        tools:src="@drawable/twitter"
        tools:srcCompat="@drawable/twitter" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:text="@string/Name"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/Age"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:text="@string/CityOfBirth"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:text="@string/Status"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile" />
</LinearLayout>