<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/twitter"
        android:src="@drawable/twitter"
        tools:srcCompat="@drawable/twitter" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="250dp"
        android:background="@drawable/blue_round_corners_background"
        android:orientation="vertical">

        <EditText
            android:id="@+id/LoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/loginHint"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/PasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LoginEditText"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PasswordEditText"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/white_round_corners_background"
            android:text="@string/login" />
    </RelativeLayout>

</RelativeLayout>